--- a/tests/README
+++ b/tests/README
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2014 Jolla Ltd.
+# SPDX-FileCopyrightText: 2025 Jolla Mobile Ltd
+#
+# SPDX-License-Identifier: BSD-3-Clause
+
 These tests are designed to be run via testrunner-lite.
 
 To run them all:
